Revision history for HTML::Forms

          - MCat forms working
          - Added MCat server
          - Javascript mow has its own package deps system
          - Added time with zone field
          - Toggle js working
          - Test forms server and TestMany field types
          - Added more field types
          - Moved namespace::autoclean to end of code

0.1.1     2017-12-04 15:06:49
          - Added project files to master branch
