@@ -1,7 +1,7 @@
 package MCat::Context;
 
 use HTML::Forms::Constants qw( FALSE TRUE );
-use HTML::Forms::Types     qw( Bool HashRef Str );
+use HTML::Forms::Types     qw( ArrayRef Bool HashRef Str );
 use JSON::MaybeXS          qw( encode_json );
 use Type::Utils            qw( class_type );
 use MCat::Schema;
@@ -9,12 +9,12 @@ use Moo;
 
 has 'config', is => 'ro', isa => class_type('MCat::Config'), required => TRUE;
 
-has 'messages' => is => 'lazy', isa => Str, builder => sub {
+has 'messages' => is => 'lazy', isa => ArrayRef, builder => sub {
    my $self    = shift;
    my $request = $self->request;
    my $session = $request->session;
 
-   return encode_json($session->collect_status_messages($request));
+   return $session->collect_status_messages($request);
 };
 
 has 'posted' => is => 'lazy', isa => Bool, builder => sub {
@@ -36,6 +36,10 @@ has 'schema'  => is => 'lazy', isa => class_type('MCat::Schema'),
    };
 
 has 'stash' => is => 'ro', isa => HashRef, default => sub { {} };
+
+sub model {
+   my ($self, $rs_name) = @_; return $self->schema->resultset($rs_name);
+}
 
 sub view { TRUE }
 
