@@ -1,0 +1,38 @@
+[%-
+   wrapper = options.url.defined ? 'a' : 'button';
+   classes = (options.modifiers ? ' button--' _ options.modifiers.join(' button--') : '') _ (options.class ? ' ' _ options.class : '');
+   use_wrapper = options.modifiers && options.modifiers.grep('with-icon').size;
+-%]
+<[% wrapper %]
+   [% IF wrapper != 'a' %]
+      type="[% options.type.defined ? options.type : 'submit' %]"
+   [% ELSE %]
+      role="button"
+   [% END %]
+   class="button[% classes | html %]"
+   [% IF options.title %]title="[% options.title | html %]"[% END %]
+   [% IF options.id %]id="[% options.id %]"[% END %]
+   [% IF options.url %]href="[% options.url %]"[% END %]
+   [% IF options.external %]target="_blank"[% END %]
+   [% FOREACH attr IN options.data %]data-[% attr.key %]="[% attr.value %]"[% END %]
+   [% IF options.onclick %]onclick="[% options.onclick | replace('"', "'") %]"[% END %]
+   >
+   [%- IF options.icon_name || options.svg_icon_name -%]
+      [% IF use_wrapper %]
+         <span class="button__icon-wrapper">
+      [% END %]
+         [% IF options.icon_name %]
+            [% icon(options.icon_name, 'button__icon') %]
+         [% END %]
+         [% IF options.svg_icon_name %]
+            [% svg_icon(options.svg_icon_name, 'button__icon ' _ options.svg_icon_class) %]
+         [% END %]
+      [% IF use_wrapper %]
+         </span>
+      [% END %]
+   [% END -%]
+   <span class="[% options.label_class %]">
+      [%- options.text | html -%]
+      [%- options.raw_html -%]
+   </span>
+</[% wrapper %]>
