@@ -1,0 +1,34 @@
+[% include_field_name = options.callback == 'prompt' || options.callback == 'selector' %]
+<form
+   method="post"
+   action="[% url || options.url %]"
+   class="u-inline [% options.form_class %]"
+   [% IF options.form_id %]id="[% options.form_id %]"[% END %]
+   [% IF options.callback %]
+      data-c="form-callback-submit"
+      data-callback-type="[% options.callback %]"
+      data-callback-text="[% options.callback_text | html %]"
+      [% IF options.callback_title %]data-callback-title="[% options.callback_title | html %]"[% END %]
+   [% END %]
+   [% IF include_field_name && options.callback_field_name %]
+      data-callback-field-name="[% options.callback_field_name | html %]"
+   [% END %]
+   [% IF options.callback == "prompt" %]
+      [% IF options.callback_field_value %]data-callback-field-value="[% options.callback_field_value | html %]"[% END %]
+      [% IF options.callback_field_rows %]data-callback-field-rows="[% options.callback_field_rows | html %]"[% END %]
+      [% IF options.callback_field_maxlength %]data-callback-field-maxlength="[% options.callback_field_maxlength | html %]"[% END %]
+   [% END %]
+   [% IF options.callback == "selector" %]
+      [% IF options.callback_selector %]data-callback-selector="[% options.callback_selector %]"[% END %]
+      [% IF options.callback_selector_args %]data-callback-selector-args="[% options.callback_selector_args %]"[% END %]
+   [% END %]
+   >
+   <input type="hidden" name="_verify" value="[% c.generate_post_verification_hash %]" />
+   [% FOREACH hidden IN options.hiddens.pairs %]
+      <input type="hidden" name="[% hidden.key | html %]" value="[% hidden.value | html %]" />
+   [% END %]
+   [% IF include_field_name && !options.hiddens.defined(options.callback_field_name) %]
+      <input type="hidden" name="[% options.callback_field_name %]" value="" />
+   [% END %]
+   [% content %]
+</form>
