@@ -1,5 +1,6 @@
 Revision history for HTML::Forms
 
+          - MCat artist model working
           - MCat forms working
           - Added MCat server
           - Javascript mow has its own package deps system
